// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExercisePreview using questionStates matches snapshot with chosen answer 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card "
    >
      <div>
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body has-correct-answer"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled answer-selected answer-correct"
                          >
                            <input
                              aria-details="feedback-1234@5-0"
                              checked={true}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Selected Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <aside
                          className="question-feedback bottom"
                          id="feedback-1234@5-0"
                        >
                          <div
                            aria-label="Answer Feedback"
                            className="arrow"
                          />
                          <aside>
                            <div
                              className="question-feedback-content has-html"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "Feedback",
                                }
                              }
                            />
                          </aside>
                        </aside>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using questionStates matches snapshot with labeled answers 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card "
    >
      <div>
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body has-correct-answer"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled answer-selected answer-correct"
                          >
                            <input
                              aria-details="feedback-1234@5-0"
                              checked={true}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Selected Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <div
                                  className="sc-iqcoie egDBZj"
                                >
                                  <span>
                                    Correct Answer
                                  </span>
                                </div>
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <aside
                          className="question-feedback bottom"
                          id="feedback-1234@5-0"
                        >
                          <div
                            aria-label="Answer Feedback"
                            className="arrow"
                          />
                          <aside>
                            <div
                              className="question-feedback-content has-html"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "Feedback",
                                }
                              }
                            />
                          </aside>
                        </aside>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using questionStates matches snapshot without chosen answer 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card "
    >
      <div>
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body has-correct-answer"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled answer-correct"
                          >
                            <input
                              aria-details="feedback-1234@5-0"
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <aside
                          className="question-feedback bottom"
                          id="feedback-1234@5-0"
                        >
                          <div
                            aria-label="Answer Feedback"
                            className="arrow"
                          />
                          <aside>
                            <div
                              className="question-feedback-content has-html"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "Feedback",
                                }
                              }
                            />
                          </aside>
                        </aside>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot with overlay and correctness 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card is-selected"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body has-correct-answer"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled answer-correct"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                      <div
                        className="detailed-solution"
                      >
                        <div
                          className="header"
                        >
                          Detailed solution:
                        </div>
                        <div
                          className="solution"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<span data-math='e^{\\\\text{Blue}}'></span><span data-math='e^{\\\\text{Blue}}'></span>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot with overlay and selected false 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card is-selected"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                      <div
                        className="detailed-solution"
                      >
                        <div
                          className="header"
                        >
                          Detailed solution:
                        </div>
                        <div
                          className="solution"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<span data-math='e^{\\\\text{Blue}}'></span><span data-math='e^{\\\\text{Blue}}'></span>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot with overlay and selected true 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card is-selected"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                      <div
                        className="detailed-solution"
                      >
                        <div
                          className="header"
                        >
                          Detailed solution:
                        </div>
                        <div
                          className="solution"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<span data-math='e^{\\\\text{Blue}}'></span><span data-math='e^{\\\\text{Blue}}'></span>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot without overlay 1`] = `
<div
  className="sc-bBrHrO ihULve"
>
  <div
    className="sc-gsnTZi dxdISE"
    data-task-step-id={1}
  >
    <div
      className="sc-bczRLJ fZGYwW exercise-step sc-fLlhyt bPXDAE sc-ivTmOn sc-cxabCf joNzek hkSCMd preview-card "
    >
      <div>
        <div
          id="step-card"
        >
          <div
            className="sc-dkzDqf eWUzRx step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="sc-eCYdqJ eSWpyp"
          >
            <div>
              <div
                className="step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="sc-evZas bgIoZz openstax-question step-card-body has-correct-answer"
                  data-question-number={1}
                  data-test-id="question"
                >
                  <div
                    className="sc-crXcEl eikqY"
                  >
                    <div>
                      <div
                        className="answers-table"
                      >
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled answer-correct"
                          >
                            <input
                              aria-details="feedback-1234@5-0"
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-0"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-0"
                            >
                              <span
                                aria-label="Choice A:"
                                className="answer-letter-wrapper"
                                data-answer-choice="A"
                                data-test-id="answer-choice-A"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "True",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                        <aside
                          className="question-feedback bottom"
                          id="feedback-1234@5-0"
                        >
                          <div
                            aria-label="Answer Feedback"
                            className="arrow"
                          />
                          <aside>
                            <div
                              className="question-feedback-content has-html"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "Feedback",
                                }
                              }
                            />
                          </aside>
                        </aside>
                        <div
                          className="openstax-answer"
                        >
                          <section
                            className="answers-answer disabled"
                          >
                            <input
                              checked={false}
                              className="answer-input-box"
                              disabled={true}
                              id="1234@5-option-1"
                              name="1234@5-options"
                              onChange={[Function]}
                              type="radio"
                            />
                            <label
                              className="answer-label"
                              htmlFor="1234@5-option-1"
                            >
                              <span
                                aria-label="Choice B:"
                                className="answer-letter-wrapper"
                                data-answer-choice="B"
                                data-test-id="answer-choice-B"
                              />
                              <div
                                aria-atomic="true"
                                aria-live="polite"
                                className="answer-answer"
                                role="status"
                              >
                                <span
                                  className="answer-content"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "False",
                                    }
                                  }
                                />
                              </div>
                            </label>
                          </section>
                        </div>
                      </div>
                      <div
                        className="detailed-solution"
                      >
                        <div
                          className="header"
                        >
                          Detailed solution:
                        </div>
                        <div
                          className="solution"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<span data-math='e^{\\\\text{Blue}}'></span><span data-math='e^{\\\\text{Blue}}'></span>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="sc-breuTD gtohXR step-card-footer"
                >
                  <div
                    className="step-card-footer-inner"
                  >
                    <div
                      className="points"
                      role="status"
                    >
                      <span
                        className="attempts-left"
                      />
                      <div>
                        <strong>
                          Detailed solution:
                        </strong>
                         
                        <span
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<span data-math='e^{\\\\text{Blue}}'></span>",
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="controls"
                    >
                      <button
                        className="sc-kDDrLX dibnqc"
                        data-test-id="submit-answer-btn"
                        disabled={true}
                        onClick={[Function]}
                      >
                        Submit & continue
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
